[package]
name = "sb-block-def-genie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sb-sbity = { git = "https://github.com/rusty-scratch/sb-sbity" }

[features]
default = ["sb-scratchy", "sb-itchy", "serde"]
serde = []
sb-scratchy = []
sb-itchy = []
